make windows installer task work with jlink image