@@ -1,13 +1,8 @@
 @echo off
 setlocal
 
-rem Set path to the Java executable
-set PATH=.\jre\bin;%PATH%
-
-rem Set the path to the JavaFX SDK
-set JAVAFX_SDK=.\lib\javafx\lib
-
-rem Run the application with the local JavaFX
-java --module-path %JAVAFX_SDK% --add-modules javafx.controls,javafx.fxml -jar application.jar
+:: Launch the application and close this script's terminal window
+start "" ".\image\bin\appLauncher"
 
 endlocal
+exit
